2008-07-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* config.in: Regenerate.
	* s/ms-w32.h (subprocesses): Define unconditionally.
	* s/template.h (subprocesses): Update comment.
	* s/vms.h (subprocesses):
	* s/usg5-4.h (subprocesses):
	* s/hpux10-20.h (subprocesses):
	* s/gnu-linux.h (subprocesses):
	* s/cygwin.h (subprocesses):
	* s/bsd-common.h (subprocesses):
	* s/aix4-2.h (subprocesses):
	* s/darwin.h (subprocesses): Do not define, defined by default now.

	* Makefile.in (C_SWITCH_SITE, LD_SWITCH_SITE): Remove, unused.
	Remove all references.
	(temacs): Add GNUStep specific ld flags.

	* nsterm.m (syms_of_nsterm): Provide ns, not ns-windowing,
	similarly to what X does.

2008-07-22  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfns.m (x-list-fonts): Remove.
	(syms_of_nsfns): Drop the x-list-fonts declaration.
	* nsterm.m: Get rid of remaining "//" comments.

2008-07-22  Chong Yidong  <cyd@stupidchicken.com>

	* xselect.c (Fx_rotate_cut_buffers_internal): Doc fix.

	* nsselect.m (Fns_selection_exists_p, Fns_selection_owner_p)
	(Fx_get_selection_internal, Fns_rotate_cut_buffers_internal)
	(Fns_own_selection_internal, Fx_disown_selection_internal)
	(Fns_get_cut_buffer_internal, Fns_store_cut_buffer_internal):

	* nsmenu.m (Fns_reset_menu, Fx_popup_menu): Change to use 'doc: /*
	... */' style of docstrings.  Doc fixes.

2008-07-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* terminfo.c (UP, BC, PC): Undo previous change.

	* nsfns.m: Rename ns prefixed functions/variables to the
	corresponding x versions.  Update references.

2008-07-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* syntax.c (char_quoted): Check "charpos > beg" before decrementing.

2008-07-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* nsfns.m (x_set_menu_bar_lines, x_set_tool_bar_lines):
	Remove forwarding functions.
	(ns_set_menu_bar_lines): Rename to x_set_menu_bar_lines, make
	non-static.
	(ns_set_tool_bar_lines): Rename to x_set_tool_bar_lines, make
	non-static.