@@ -95,7 +95,6 @@ NOTE-END */
 
 #ifdef WINDOWSNT
 #define VIRT_ADDR_VARIES
-#define DATA_END 	get_data_end ()
 #define DATA_START 	get_data_start ()
 #define NO_ARG_ARRAY
 #endif
